[#17] Add alert info to transalation

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module_pt.properties
@@ -124,3 +124,5 @@ share=Partilhar
 works_as=Funciona como
 data_set_report=Relat\u00F3rio de Dados Agregados
 meta_data=Meta dados
+email_alert=Alerta de e-mail
+sms_alert=Alerta SMS
