[#i18n] test i18n to reporting page

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
@@ -1,1 +1,5 @@
-start_epi_week=Start epidemiological week
+start_epi_week=Start epidemiological week en
+end_epi_week=End epidemiological week en
+gen_report=GENERATE REPORT en
+export_to_xls=Export data to xls en
+diseases=Diseases en
