--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
@@ -1,1 +1,5 @@
-start_epi_week=Start epidemiological week
+start_epi_week=Start epidemiological week pt
+end_epi_week=End epidemiological week pt
+gen_report=GENERATE REPORT pt
+export_to_xls=Export data to xls pt
+diseases=Diseases pt
