[#i18n] test i18n to reporting page

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
@@ -1,5 +1,7 @@
-start_epi_week=Start epidemiological week en
-end_epi_week=End epidemiological week en
-gen_report=GENERATE REPORT en
-export_to_xls=Export data to xls en
-diseases=Diseases en
+start_epi_week=Start epidemiological week
+end_epi_week=End epidemiological week
+gen_report=GENERATE REPORT
+export_to_xls=Export data to xls
+diseases=Diseases
+category_location=B.E.S - Multiple locations
+category_week=B.E.S - Time series
