[#i18n] test i18n to reporting page

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
@@ -1,5 +1,8 @@
-start_epi_week=Start epidemiological week
-end_epi_week=End epidemiological week
-gen_report=GENERATE REPORT
-export_to_xls=Export data to xls
-diseases=Diseases
+start_epi_week=Comece semana epidemiológica
+end_epi_week=Fim de semana epidemiológica
+gen_report=Gerar relatório
+export_to_xls=Exportar dados para arquivo xls
+diseases=doenças
+category_location=B.E.S - Vários locais
+category_week=B.E.S - séries temporais
+week=Semana
