--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
@@ -5,3 +5,4 @@ export_to_xls=Export data to xls
 diseases=Diseases
 category_location=B.E.S - Multiple locations
 category_week=B.E.S - Time series
+week=Week
