[#i18n] test i18n to reporting page

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
@@ -6,3 +6,7 @@ diseases=Diseases
 category_location=B.E.S - Multiple locations
 category_week=B.E.S - Time series
 week=Week
+location=Location
+time_series=Time series
+ops_indicator=Ops Indicator
+location_dialog_text=Select all provinces, districts or health facilities that you would like to report on
