--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
@@ -6,3 +6,7 @@ diseases=doenças
 category_location=B.E.S - Vários locais
 category_week=B.E.S - séries temporais
 week=Semana
+location=Localização
+time_series=temporais séries 
+ops_indicator=indicador Ops
+location_dialog_text=Selecione todas as províncias, distritos ou unidades de saúde que você gostaria de relatar.
