[#i18n] test i18n to reporting page

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
@@ -7,6 +7,10 @@ category_location=B.E.S - Multiple locations
 category_week=B.E.S - Time series
 week=Week
 location=Location
-time_series=Time series
+time_series=Time Series
 ops_indicator=Ops Indicator
 location_dialog_text=Select all provinces, districts or health facilities that you would like to report on
+locale=en
+sync_status=Sync Status
+sync_time=Sync Time
+odk_version=ODK Version
