--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
@@ -2,11 +2,15 @@ start_epi_week=Comece semana epidemiológica
 end_epi_week=Fim de semana epidemiológica
 gen_report=Gerar relatório
 export_to_xls=Exportar dados para arquivo xls
-diseases=doenças
+diseases=Doenças
 category_location=B.E.S - Vários locais
-category_week=B.E.S - séries temporais
+category_week=B.E.S - Séries temporais
 week=Semana
 location=Localização
-time_series=temporais séries 
-ops_indicator=indicador Ops
+time_series=Temporais Séries
+ops_indicator=Ops Indicador
 location_dialog_text=Selecione todas as províncias, distritos ou unidades de saúde que você gostaria de relatar.
+locale=pt
+sync_status=Estado da sincronização
+sync_time=Tempo de sincronização
+odk_version=ODK versão
