[#i18n] test i18n to reporting page

--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_pt.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_pt.properties
@@ -644,6 +644,7 @@ nationality=Nacionalidade
 update_access_denied_message=N\u00E3o tem permiss\u00F5es de actualiza\u00E7\u00E3o sobre o objecto
 please_enter_at_least_n_words=Por favor, introduza pelo menos {0} palavras.
 dhis-web-settings=Configura\u00E7\u00F5es
+reporting-page=P\u00E1gina de relat\u00F3rio
 
 #-- Object names --------------------------------------------------------#
 
@@ -664,3 +665,5 @@ attribute=Atributo
 validation_rule_group=Grupo de regras de valida\u00E7\u00E3o
 organisation_unit_level=N\u00EDvel de unidade organizacional
 validation_rule=Regra de valida\u00E7\u00E3o
+
+
