--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/resources/org/hisp/dhis/user/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/resources/org/hisp/dhis/user/i18n_module_pt.properties
@@ -342,3 +342,12 @@ F_SCHEDULING_SEND_MESSAGE=Agendar enviar mensagens
 F_EXCEL_REPORT_ADMINISTRATION=Administra\u00E7\u00E3o de Relat\u00F3rio em Excel
 F_PATIENT_MANAGEMENT=Gest\u00E3o do benefici\u00E1rio
 user_group_details=Detalhes do grupo do utilizador
+work_phone=Telefone de Trabalho
+telephone=Telefone
+org_type=Tipo de organiza\u00E7\u00E3o
+org_name=Nome de organiza\u00E7\u00E3o
+notes=Notas
+user_role=Fun\u00E7\u00E3o de usu\u00E1rio
+email_alert=Alerta de e-mail
+sms_alert=Alerta SMS
+locations=Locais
