--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
@@ -4,7 +4,7 @@ gen_report=Gerar relatório
 export_to_xls=Exportar dados para arquivo xls
 diseases=Doenças
 category_location=B.E.S - Vários locais
-category_week=B.E.S - Séries temporais
+category_week=B.E.S - Temporais Séries
 week=Semana
 location=Localização
 time_series=Temporais Séries
