[#i18n] release i18n to reporting page

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/resources/org/hisp/dhis/user/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/resources/org/hisp/dhis/user/i18n_module_pt.properties
@@ -348,6 +348,6 @@ org_type=Tipo de organiza\u00E7\u00E3o
 org_name=Nome de organiza\u00E7\u00E3o
 notes=Notas
 user_role=Fun\u00E7\u00E3o de usu\u00E1rio
-email_alert=Alerta de e-mail
-sms_alert=Alerta SMS
+email_alert=Receba E-mail alertas
+sms_alert=Receba SMS alertas
 locations=Locais
