Add translation for customized rules.

--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module_pt.properties
@@ -147,3 +147,7 @@ done=Realizado
 visible_in_validation_violations=Vis\u00EDvel em viola\u00E7\u00F5es de valida\u00E7\u00E3o
 values_found=Valores encontrados
 use_aggregated_data=Usar dados agregados
+customed_validation_rule_Sarampo=Sarampo: casos em recente (A) EPI semana (s)> (B)
+customed_validaiton_rule_Meningite=Meningite: Cases increases by ( A ) times in recent ( B ) consecutive weeks
+customed_validation_rule_malaria=Mal\u00E1ria: Cases> m\00E9dia da semana em curso + (A) anteriores semanas a semana em curso - (B) semanas depois, no passado (C) anos + (D) * std dev
+customed_validation_rule_disenteria=Disentería: Cases> média para mesma semana em anos passados (A) + (B) * std dev
