test to change the tips in location selection dialog component

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
@@ -14,3 +14,5 @@ locale=pt
 sync_status=Estado da sincronização
 sync_time=Tempo de sincronização
 odk_version=ODK versão
+cancel=CANCELAR
+ok=OK ESTÁ BEM
