--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module_pt.properties
@@ -151,3 +151,9 @@ customed_validation_rule_Sarampo=Sarampo: casos em recente (A) EPI semana (s)> (
 customed_validaiton_rule_Meningite=Meningite: Cases increases by ( A ) times in recent ( B ) consecutive weeks
 customed_validation_rule_malaria=Mal\u00E1ria: Cases> m\00E9dia da semana em curso + (A) anteriores semanas a semana em curso - (B) semanas depois, no passado (C) anos + (D) * std dev
 customed_validation_rule_disenteria=Disentería: Cases> média para mesma semana em anos passados (A) + (B) * std dev
+ininstruction=Instru\u00E7\u00E3o
+visible_when_rule_is_violated=Vis\u00EDvel quando a regra \u00E9 violada
+rule_type=tipo de regra
+skip_if_any_value_is_missing=Ignorar se algum valor estiver faltando
+skip_if_all_values_are_missing=Ignorar se todos os valores estiverem ausentes
+never_skip=Nunca pule
