Add translation form some term.

--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_pt.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_pt.properties
@@ -665,5 +665,7 @@ attribute=Atributo
 validation_rule_group=Grupo de regras de valida\u00E7\u00E3o
 organisation_unit_level=N\u00EDvel de unidade organizacional
 validation_rule=Regra de valida\u00E7\u00E3o
+default=padr\u00E3o
+visible_in_default_rule_type=Vis\u00EDvel no tipo de regra padr\u00E3o
 
 
