--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module_pt.properties
@@ -126,3 +126,4 @@ data_set_report=Relat\u00F3rio de Dados Agregados
 meta_data=Meta dados
 email_alert=Alerta de e-mail
 sms_alert=Alerta SMS
+donut_name=Gr\u00E1fico de rosca
