Add translation for donut chart title and labels.

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module_pt.properties
@@ -127,3 +127,9 @@ meta_data=Meta dados
 email_alert=Alerta de e-mail
 sms_alert=Alerta SMS
 donut_name=Gr\u00E1fico de rosca
+donut_title=Dados nacionais da submiss\u00E3o de mBES para a semana
+hf_total_num=N\u00FAmero total de estabelecimentos de sa\u00FAde existentes
+hf_using_num=As instala\u00E7\u00F5es de sa\u00FAde est\u00E3o usando o sistema mBES
+hf_completed=Os servi\u00E7os de sa\u00FAde apresentaram o seu mBES completado
+hf_incomplete=As institui\u00E7\u00F5es de sa\u00FAde apresentaram um mBES incompleto
+hf_not_summited=Os servi\u00E7os de sa\u00FAde n\u00E3o submeteram o seu mBES
