Add translation for pivot table in dropdown menu.

--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_pt.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_pt.properties
@@ -595,7 +595,7 @@ laos=Rep\u00FAblica Popular Democr\u00E1tica do Laos
 format.TwoYearly.startDate=yyyy 'e '
 organisation_units=Unidades organizacionais
 please_enter_description=Por favor, introduza a descri\u00E7\u00E3o\!
-dhis-web-pivot=Pivot Table
+dhis-web-pivot=Tabela Piv\u00F4
 please_letters_numbers_spaces_underscores_only=Por favor somente letras, n\u00FAmeros, espa\u00E7os e sublinhados
 false=N\u00E3o
 dhis-web-dashboard-integration=Painel de instrumentos
