[#19 -]Add translation for reporting page.

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
@@ -17,3 +17,8 @@ odk_version=ODK Version
 cancel=CANCEL
 ok=OK
 comments=Comments
+mBes_not_submitted=mBes not submitted
+mBes_incomplete=Incomplete mBes submitted
+mBes_complete=Complete mBes submitted
+mBes_late_submission=Late submission
+mBes_early_submission=Early submission
