--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
@@ -8,7 +8,7 @@ category_week=B.E.S - Temporais Séries
 week=Semana
 location=Localização
 time_series=Temporais Séries
-ops_indicator=Ops Indicador
+ops_indicator=Indicador Ops
 location_dialog_text=Selecione todas as províncias, distritos ou unidades de saúde que você gostaria de relatar.
 locale=pt
 sync_status=Estado da sincronização
@@ -17,3 +17,8 @@ odk_version=ODK versão
 cancel=CANCELAR
 ok=ESTÁ BEM
 comments=Comentários
+mBes_not_submitted=MBes não enviados
+mBes_incomplete=MBes incompletos submetidos
+mBes_complete=MBes concluídos enviados
+mBes_late_submision=Submissão atrasada
+mBes_early_submission=Submissão precoce
