[#19] - Add translation for date-picker-bar.

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
@@ -22,3 +22,15 @@ mBes_incomplete=Incomplete mBes submitted
 mBes_complete=Complete mBes submitted
 mBes_late_submission=Late submission
 mBes_early_submission=Early submission
+January=January
+February=February
+March=March
+April=April
+May=May
+June=June
+July=July
+August=August
+September=September
+October=October
+November=November
+December=December
