--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
@@ -22,3 +22,15 @@ mBes_incomplete=MBes incompletos submetidos
 mBes_complete=MBes concluídos enviados
 mBes_late_submision=Submissão atrasada
 mBes_early_submission=Submissão precoce
+January=janeiro
+February=fevereiro
+March=março
+April=abril
+May=maio
+June=junho
+July=julho
+August=agosto
+September=setembro
+October=outubro
+November=novembro
+December=dezembro
