[#19 -] English Month Name for Column Header on Ops Indicator Page.

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
@@ -34,3 +34,15 @@ September=September
 October=October
 November=November
 December=December
+Jan=Jan
+Feb=Feb
+Mar=Mar
+Apr=Apr
+May=May
+June=June
+July=July
+Aug=Aug
+Sept=Sept
+Oct=Oct
+Nov=Nov
+Dec=Dec
