--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
@@ -34,3 +34,15 @@ September=setembro
 October=outubro
 November=novembro
 December=dezembro
+Jan=jan
+Feb=fev
+Mar=março
+Apr=abril
+May=maio
+June=junho
+July=julho
+Aug=agosto
+Sept=set
+Oct=out
+Nov=nov
+Dec=dez
