[#19 -] Correct the translation in the column of ops indicator.

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
@@ -39,10 +39,11 @@ Feb=Feb
 Mar=Mar
 Apr=Apr
 May=May
-June=June
-July=July
+Jun=Jun
+Jul=Jul
 Aug=Aug
-Sept=Sept
+Sep=Sep
 Oct=Oct
 Nov=Nov
 Dec=Dec
+null_string=
