--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_pt.properties
@@ -40,9 +40,10 @@ Mar=março
 Apr=abril
 May=maio
 June=junho
-July=julho
+Jul=julho
 Aug=agosto
-Sept=set
+Sep=set
 Oct=out
 Nov=nov
 Dec=dez
+null_string=
