Correct the translation about Visable in default rule type(Portguese).

--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module_pt.properties
@@ -158,4 +158,4 @@ skip_if_all_values_are_missing=Ignorar se todos os valores estiverem ausentes
 never_skip=Nunca pule
 additional_rule=regra adicional
 default=padr\u00E3o
-visible_in_default_rule_type=Vis\u00EDvel no tipo de regra padrão
+visible_in_default_rule_type=Vis\u00EDvel no tipo de regra padr\u00E3o
