[33] Add alert configuration page and save data to dhis2.

--- a/dhis-2/dhis-web/dhis-web-dataentry/src/main/resources/org/hisp/dhis/de/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-dataentry/src/main/resources/org/hisp/dhis/de/i18n_module_pt.properties
@@ -115,3 +115,5 @@ min=Min
 no_period_selected=Nenhum per\u00EDodo foi Seleccionado
 does_not_exist=n\u00E3o existe
 run_validation=Executar valida\u00E7\u00E3o
+validation_configuration=Configura\u00E7\u00E3o de Valida\u00E7\u00E3o
+alert_configuration=Configur\u00E7\u00E3o de lerta
