--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module_pt.properties
@@ -159,3 +159,6 @@ never_skip=Nunca pule
 additional_rule=regra adicional
 default=padr\u00E3o
 visible_in_default_rule_type=Vis\u00EDvel no tipo de regra padr\u00E3o
+validation_configuration=Configura\u00E7\u00E3o de Valida\u00E7\u00E3o
+alert_configuration=Configur\u00E7\u00E3o de lerta
+intro_alert_configuration=Visualizar ou editar a configura\u00E7\u00E3o do alerta.
