[# 33] Give hints when alert configuration is updated.

--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module_pt.properties
@@ -172,3 +172,4 @@ Sat=sab
 please_define_the_dates_for_alerts=Defina as datas para alertas
 Date=Data
 Time=Tempo
+alert_configuration_saved=Configur\u00E7\u00E3o de alerta guardada
