[TPS-59][wang yue] create message-page and add datepicker and location components

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
@@ -9,6 +9,10 @@ week=Week
 location=Location
 time_series=Time Series
 ops_indicator=Ops Indicator
+message=Message
+message_head=B.E.S - Message
+start_date=Start Date
+end_date=End Date
 location_dialog_text=Select all provinces, districts or health facilities that you would like to report on
 locale=en
 sync_status=Sync Status
