[TPS-60][wang yue] Displays apart the comments send with each submission

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/i18n/i18n_module_en.properties
@@ -11,6 +11,7 @@ time_series=Time Series
 ops_indicator=Ops Indicator
 message=Message
 message_head=B.E.S - Message
+comments_head=B.E.S - Comments
 start_date=Start Date
 end_date=End Date
 location_dialog_text=Select all provinces, districts or health facilities that you would like to report on
