[TPS-289][Wang Yue] - modify the page style

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module_pt.properties
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module_pt.properties
@@ -134,4 +134,4 @@ hf_completed=Os servi\u00E7os de sa\u00FAde apresentaram o seu mBES completado
 hf_incomplete=As institui\u00E7\u00F5es de sa\u00FAde apresentaram um mBES incompleto
 hf_not_summited=Os servi\u00E7os de sa\u00FAde n\u00E3o submeteram o seu mBES
 alert_log=Alerta log
-submission=Todas Submicoes
+submission=All Submission Report
